--- a/n8nmanager/index.html
+++ b/n8nmanager/index.html
@@ -30,16 +30,16 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="n8nManager - 行動工作流程監控與自動化掌控">
   <meta name="twitter:description" content="下載 n8nManager App，隨時隨地在 Android 和 iOS 裝置上監控、管理並控制您的 n8n 自動化工作流程。提升效率，掌握每一次執行！">
-  <meta name="twitter:image" content="/images/icon.png">
+  <meta name="twitter:image" content="images/icon.png">
   <meta name="twitter:creator" content="@frankchen_tw">
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.frankchen.tw/n8nmanager">
 
   <!-- Icons -->
-  <link rel="icon" href="/images/icon.png">
-  <link rel="shortcut icon" href="/images/icon.png">
-  <link rel="apple-touch-icon" href="/images/icon.png">
+  <link rel="icon" href="images/icon.png">
+  <link rel="shortcut icon" href="images/icon.png">
+  <link rel="apple-touch-icon" href="images/icon.png">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 
   <!-- Schema.org Structured Data -->
   <script type="application/ld+json">
@@ -188,17 +188,17 @@
   <!-- Navigation -->
   <header class="bg-white shadow-sm py-4 px-6 md:px-16 flex justify-between items-center border-b border-slate-200 sticky top-0 z-50 animate-fade-in-up">
     <a href="/" class="flex items-center space-x-3">
-      <img src="/images/icon.png" alt="n8nManager App Icon" width="32" height="32" class="rounded-lg">
+      <img src="images/icon.png" alt="n8nManager App Icon" width="32" height="32" class="rounded-lg">
       <div class="text-2xl font-bold text-slate-900">n8nManager</div>
     </a>
     <nav class="hidden md:flex space-x-8 items-center" aria-label="主導航">
-      <a href="/changelog.html" class="text-slate-600 hover:text-indigo-600 font-medium transition-colors inline-block">
+      <a href="changelog.html" class="text-slate-600 hover:text-indigo-600 font-medium transition-colors inline-block">
         更新日誌
       </a>
-      <a href="/privacy.html" class="text-slate-600 hover:text-indigo-600 font-medium transition-colors inline-block">
+      <a href="privacy.html" class="text-slate-600 hover:text-indigo-600 font-medium transition-colors inline-block">
         隱私權政策
       </a>
-      <a href="/#download" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold px-6 py-2.5 rounded-lg transition-colors hover-scale-sm">
+      <a href="#download" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold px-6 py-2.5 rounded-lg transition-colors hover-scale-sm">
         Try n8nManager
       </a>
     </nav>
@@ -216,20 +216,20 @@
   <div id="mobile-menu-panel" class="fixed top-0 right-0 bottom-0 w-4/5 max-w-sm bg-white shadow-2xl z-40 md:hidden transform translate-x-full transition-transform duration-300">
     <nav class="flex flex-col h-full pt-20 px-6" aria-label="移動端導航">
       <div class="flex flex-col space-y-2">
-        <a href="/changelog.html" class="text-slate-700 hover:text-indigo-600 hover:bg-indigo-50 font-semibold py-4 px-4 rounded-lg transition-colors block">
+        <a href="changelog.html" class="text-slate-700 hover:text-indigo-600 hover:bg-indigo-50 font-semibold py-4 px-4 rounded-lg transition-colors block">
           <span class="text-base">更新日誌</span>
         </a>
-        <a href="/privacy.html" class="text-slate-700 hover:text-indigo-600 hover:bg-indigo-50 font-semibold py-4 px-4 rounded-lg transition-colors block">
+        <a href="privacy.html" class="text-slate-700 hover:text-indigo-600 hover:bg-indigo-50 font-semibold py-4 px-4 rounded-lg transition-colors block">
           <span class="text-base">隱私權政策</span>
         </a>
-        <a href="/#download" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-4 rounded-lg transition-colors block text-center">
+        <a href="#download" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-4 rounded-lg transition-colors block text-center">
           <span class="text-base">Try it</span>
         </a>
       </div>
 
       <div class="mt-auto mb-8 pt-8 border-t border-slate-200">
         <div class="flex items-center space-x-3 px-4">
-          <img src="/images/icon.png" alt="n8nManager" width="40" height="40" class="rounded-lg">
+          <img src="images/icon.png" alt="n8nManager" width="40" height="40" class="rounded-lg">
           <div>
             <p class="text-sm font-bold text-slate-800">n8nManager</p>
             <p class="text-xs text-slate-500">行動工作流程監控</p>
@@ -467,13 +467,13 @@
       </p>
       <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-6">
         <div class="relative inline-block hover-scale-sm">
-          <img src="/images/app-store-badge.webp" alt="Download on the App Store" width="200" height="60" class="h-14 w-auto opacity-60 cursor-not-allowed">
+          <img src="images/app-store-badge.webp" alt="Download on the App Store" width="200" height="60" class="h-14 w-auto opacity-60 cursor-not-allowed">
           <div class="absolute inset-0 bg-white/20 rounded-lg flex items-center justify-center">
             <span class="text-white text-sm font-semibold bg-black/50 px-3 py-1 rounded-full">即將推出</span>
           </div>
         </div>
         <a href="https://play.google.com/store/apps/details?id=tw.frankchen.n8n_management_tool" target="_blank" rel="noopener noreferrer" class="inline-block hover-scale">
-          <img src="/images/google-play-badge.png" alt="在 Google Play 上取得" width="200" height="60" class="h-14 w-auto">
+          <img src="images/google-play-badge.png" alt="在 Google Play 上取得" width="200" height="60" class="h-14 w-auto">
         </a>
       </div>
     </div>
@@ -486,7 +486,7 @@
         Copyright &copy; 2025 n8nManager. All rights reserved.
       </p>
       <p class="mt-3">
-        <a href="/privacy.html" class="text-indigo-600 hover:text-indigo-700 font-medium transition-colors">
+        <a href="privacy.html" class="text-indigo-600 hover:text-indigo-700 font-medium transition-colors">
           隱私權政策
         </a>
       </p>
@@ -494,6 +494,6 @@
   </footer>
 
   <!-- JavaScript -->
-  <script src="/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
