--- a/n8nmanager/privacy.html
+++ b/n8nmanager/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#4f46e5">
+  <meta name="theme-color" content="#0084ff">
 
   <!-- SEO Meta Tags -->
   <title>隱私權政策 - n8nManager</title>
@@ -25,25 +25,36 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="max-w-6xl mx-auto">
-  <div class="min-h-screen bg-gray-100">
+  <div class="min-h-screen bg-primary">
   <!-- Navigation -->
-  <header class="bg-white shadow-sm py-4 px-6 md:px-16 flex justify-between items-center border-b border-slate-200 sticky top-0 z-50 animate-fade-in-up">
+  <header class="bg-primary/80 backdrop-blur-sm glass-border py-4 px-6 md:px-16 flex justify-between items-center sticky top-0 z-50 animate-fade-in-up">
     <a href="/" class="flex items-center space-x-3">
       <img src="images/icon.png" alt="n8nManager App Icon" width="32" height="32" class="rounded-lg">
-      <div class="text-2xl font-bold text-slate-900">n8nManager</div>
+      <div class="text-2xl font-bold text-light">n8nManager</div>
     </a>
     <nav class="hidden md:flex space-x-8 items-center" aria-label="主導航">
-      <a href="changelog.html" class="text-slate-600 hover:text-indigo-600 font-medium transition-colors inline-block">
+      <a href="changelog.html" class="text-gray-medium hover:text-accent-1 font-medium transition-colors inline-block">
         更新日誌
       </a>
-      <a href="privacy.html" class="text-slate-600 hover:text-indigo-600 font-medium transition-colors inline-block">
+      <a href="privacy.html" class="text-gray-medium hover:text-accent-1 font-medium transition-colors inline-block">
         隱私權政策
       </a>
-      <a href="#download" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold px-6 py-2.5 rounded-lg transition-colors hover-scale-sm">
+      <!-- 主題切換按鈕 -->
+      <button id="theme-toggle" class="p-2 rounded-lg text-gray-medium hover:bg-secondary-1 focus:outline-none focus:ring-2 focus:ring-accent-1 transition-colors" aria-label="切換主題">
+        <!-- 太陽圖示（深色模式顯示） -->
+        <svg id="sun-icon" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+        </svg>
+        <!-- 月亮圖示（淺色模式顯示） -->
+        <svg id="moon-icon" class="w-5 h-5 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+        </svg>
+      </button>
+      <a href="#download" class="bg-accent-1 hover:bg-accent-2 text-white font-bold px-6 py-2.5 rounded-lg transition-colors hover-scale-sm">
         Try n8nManager
       </a>
     </nav>
-    <button id="mobile-menu-button" class="md:hidden p-2 rounded-lg text-slate-600 hover:bg-slate-100 focus:outline-none focus:ring-2 focus:ring-indigo-500 relative z-50" aria-label="開啟選單" aria-expanded="false">
+    <button id="mobile-menu-button" class="md:hidden p-2 rounded-lg text-gray-medium hover:bg-secondary-2 focus:outline-none focus:ring-2 focus:ring-accent-1 relative z-50" aria-label="開啟選單" aria-expanded="false">
       <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
       </svg>
@@ -54,26 +65,35 @@
   <div id="mobile-menu-overlay" class="fixed inset-0 bg-black/50 backdrop-blur-sm z-40 md:hidden hidden"></div>
 
   <!-- Mobile Menu Panel -->
-  <div id="mobile-menu-panel" class="fixed top-0 right-0 bottom-0 w-4/5 max-w-sm bg-white shadow-2xl z-40 md:hidden transform translate-x-full transition-transform duration-300">
+  <div id="mobile-menu-panel" class="fixed top-0 right-0 bottom-0 w-4/5 max-w-sm bg-primary shadow-2xl z-40 md:hidden transform translate-x-full transition-transform duration-300">
     <nav class="flex flex-col h-full pt-20 px-6" aria-label="移動端導航">
       <div class="flex flex-col space-y-2">
-        <a href="changelog.html" class="text-slate-700 hover:text-indigo-600 hover:bg-indigo-50 font-semibold py-4 px-4 rounded-lg transition-colors block">
+        <a href="changelog.html" class="text-gray-light hover:text-accent-1 hover:bg-secondary-1 font-semibold py-4 px-4 rounded-lg transition-colors block">
           <span class="text-base">更新日誌</span>
         </a>
-        <a href="privacy.html" class="text-slate-700 hover:text-indigo-600 hover:bg-indigo-50 font-semibold py-4 px-4 rounded-lg transition-colors block">
+        <a href="privacy.html" class="text-gray-light hover:text-accent-1 hover:bg-secondary-1 font-semibold py-4 px-4 rounded-lg transition-colors block">
           <span class="text-base">隱私權政策</span>
         </a>
-        <a href="#download" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-4 rounded-lg transition-colors block text-center">
+        <a href="#download" class="bg-accent-1 hover:bg-accent-2 text-white font-bold py-4 px-4 rounded-lg transition-colors block text-center">
           <span class="text-base">Try it</span>
         </a>
+        <!-- 移動版主題切換按鈕 -->
+        <button id="theme-toggle-mobile" class="text-gray-light hover:text-accent-1 hover:bg-secondary-1 font-semibold py-4 px-4 rounded-lg transition-colors flex items-center justify-between" aria-label="切換主題" onclick="document.getElementById('theme-toggle').click()">
+          <span class="text-base">切換主題</span>
+          <div class="flex items-center">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+            </svg>
+          </div>
+        </button>
       </div>
 
-      <div class="mt-auto mb-8 pt-8 border-t border-slate-200">
+      <div class="mt-auto mb-8 pt-8 border-t border-custom">
         <div class="flex items-center space-x-3 px-4">
           <img src="images/icon.png" alt="n8nManager" width="40" height="40" class="rounded-lg">
           <div>
-            <p class="text-sm font-bold text-slate-800">n8nManager</p>
-            <p class="text-xs text-slate-500">行動工作流程監控</p>
+            <p class="text-sm font-bold text-light">n8nManager</p>
+            <p class="text-xs text-gray-medium">行動工作流程監控</p>
           </div>
         </div>
       </div>
@@ -82,90 +102,90 @@
 
   <!-- Main Content -->
   <div class="py-8 px-4 sm:px-6 md:px-8 animate-fade-in">
-    <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-8">
-      <h1 class="text-4xl font-bold text-gray-900 text-center mb-4">
+    <div class="max-w-4xl mx-auto bg-primary rounded-lg shadow-lg p-8">
+      <h1 class="text-4xl font-bold text-light text-center mb-4">
         隱私權政策
       </h1>
-      <p class="text-sm text-gray-500 text-center mb-6">
+      <p class="text-sm text-gray-medium text-center mb-6">
         生效日期：2025 年 6 月 18 日
       </p>
 
       <div class="prose prose-lg max-w-none">
         <!-- Section 1 -->
         <div class="mb-6 fade-in-section">
-          <h2 class="text-2xl font-bold text-gray-900 mt-6 mb-3">1. 引言</h2>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <h2 class="text-2xl font-bold text-light mt-6 mb-3">1. 引言</h2>
+          <p class="text-gray-light leading-relaxed mb-4">
             本隱私權政策旨在說明「n8nManager」（以下簡稱「本應用程式」）如何收集、使用、儲存和保護您的資訊。本應用程式是一款專為管理 n8n 伺服器而設計的工具，不旨在收集或分享您的個人身份資訊。
           </p>
         </div>
 
         <!-- Section 2 -->
         <div class="mb-6 fade-in-section">
-          <h2 class="text-2xl font-bold text-gray-900 mt-6 mb-3">2. 我們收集的資訊</h2>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <h2 class="text-2xl font-bold text-light mt-6 mb-3">2. 我們收集的資訊</h2>
+          <p class="text-gray-light leading-relaxed mb-4">
             本應用程式主要用於與您的私人 n8n 伺服器互動。因此，我們收集的資訊類型僅限於使本應用程式正常運作所必需的資訊：
           </p>
         </div>
 
         <!-- Section 3 -->
         <div class="mb-6 fade-in-section">
-          <h2 class="text-2xl font-bold text-gray-900 mt-6 mb-3">3. 資訊的使用方式</h2>
-          <p class="text-gray-600 leading-relaxed mb-4">我們僅將收集到的資訊用於以下目的：</p>
+          <h2 class="text-2xl font-bold text-light mt-6 mb-3">3. 資訊的使用方式</h2>
+          <p class="text-gray-light leading-relaxed mb-4">我們僅將收集到的資訊用於以下目的：</p>
         </div>
 
         <!-- Section 4 -->
         <div class="mb-6 fade-in-section">
-          <h2 class="text-2xl font-bold text-gray-900 mt-6 mb-3">4. 資訊的儲存與安全</h2>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <h2 class="text-2xl font-bold text-light mt-6 mb-3">4. 資訊的儲存與安全</h2>
+          <p class="text-gray-light leading-relaxed mb-4">
             您的 n8n 伺服器 URL 和 API 金鑰會安全地儲存在您的裝置上。URL 使用 SharedPreferences 儲存，而敏感的 API 金鑰則使用 flutter_secure_storage 進行加密儲存，以提供額外的保護。
           </p>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <p class="text-gray-light leading-relaxed mb-4">
             所有與 n8n 伺服器的通訊都強制透過 HTTPS 進行加密，以保護數據在傳輸過程中的安全。如果 URL 未使用 HTTPS，應用程式將提示錯誤。
           </p>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <p class="text-gray-light leading-relaxed mb-4">
             無雲端儲存：本應用程式不會將您的 n8n 伺服器連線資訊或任何從 n8n 伺服器獲取的數據上傳到任何雲端服務或第三方伺服器。所有數據處理和儲存均發生在您的本地裝置上。
           </p>
         </div>
 
         <!-- Section 5 -->
         <div class="mb-6 fade-in-section">
-          <h2 class="text-2xl font-bold text-gray-900 mt-6 mb-3">5. 資訊的分享</h2>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <h2 class="text-2xl font-bold text-light mt-6 mb-3">5. 資訊的分享</h2>
+          <p class="text-gray-light leading-relaxed mb-4">
             本應用程式不會將您的任何資訊（包括 n8n 伺服器連線資訊或從 n8n 伺服器獲取的數據）分享、出售或出租給任何第三方。
           </p>
         </div>
 
         <!-- Section 6 -->
         <div class="mb-6 fade-in-section">
-          <h2 class="text-2xl font-bold text-gray-900 mt-6 mb-3">6. 第三方服務連結</h2>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <h2 class="text-2xl font-bold text-light mt-6 mb-3">6. 第三方服務連結</h2>
+          <p class="text-gray-light leading-relaxed mb-4">
             本應用程式可能包含指向外部網站的連結，例如用於顯示隱私權政策或關於頁面中開發者的部落格連結。這些外部網站有其自己的隱私權政策，我們鼓勵您查閱。我們對這些網站的內容、隱私權政策或實踐不承擔任何責任。
           </p>
         </div>
 
         <!-- Section 7 -->
         <div class="mb-6 fade-in-section">
-          <h2 class="text-2xl font-bold text-gray-900 mt-6 mb-3">7. 您的選擇與控制</h2>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <h2 class="text-2xl font-bold text-light mt-6 mb-3">7. 您的選擇與控制</h2>
+          <p class="text-gray-light leading-relaxed mb-4">
             您可以隨時透過應用程式的設定頁面修改或刪除您儲存的 n8n 伺服器連線資訊。清除這些設定將從您的裝置中移除相關數據。
           </p>
         </div>
 
         <!-- Section 8 -->
         <div class="mb-6 fade-in-section">
-          <h2 class="text-2xl font-bold text-gray-900 mt-6 mb-3">8. 本政策的變更</h2>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <h2 class="text-2xl font-bold text-light mt-6 mb-3">8. 本政策的變更</h2>
+          <p class="text-gray-light leading-relaxed mb-4">
             我們可能會不時更新本隱私權政策。任何變更將在本頁面發布，並附帶新的生效日期。建議您定期查閱本政策以了解任何更新。
           </p>
         </div>
 
         <!-- Section 9 -->
         <div class="mb-6 fade-in-section">
-          <h2 class="text-2xl font-bold text-gray-900 mt-6 mb-3">9. 聯絡我們</h2>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <h2 class="text-2xl font-bold text-light mt-6 mb-3">9. 聯絡我們</h2>
+          <p class="text-gray-light leading-relaxed mb-4">
             如果您對本隱私權政策有任何疑問，請透過以下方式聯絡我們：
           </p>
-          <p class="text-gray-600 leading-relaxed mb-4">
+          <p class="text-gray-light leading-relaxed mb-4">
             
           </p>
         </div>
@@ -173,7 +193,7 @@
 
       <!-- Back to Home Button -->
       <div class="mt-8 text-center">
-        <a href="/" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 px-8 rounded-lg transition-colors inline-block hover-scale-sm">
+        <a href="/" class="bg-accent-1 hover:bg-accent-2 text-white font-bold py-3 px-8 rounded-lg transition-colors inline-block hover-scale-sm">
           返回首頁
         </a>
       </div>
@@ -181,13 +201,13 @@
   </div>
 
   <!-- Footer -->
-  <footer class="text-slate-600 py-8 text-center text-sm mt-8">
+  <footer class="text-gray-medium py-8 text-center text-sm mt-8">
     <div class="max-w-6xl mx-auto px-6">
-      <p class="text-slate-500">
+      <p class="text-gray-medium">
         Copyright &copy; 2025 n8nManager. All rights reserved.
       </p>
       <p class="mt-3">
-        <a href="privacy.html" class="text-indigo-600 hover:text-indigo-700 font-medium transition-colors">
+        <a href="privacy.html" class="text-accent-1 hover:text-accent-3 font-medium transition-colors">
           隱私權政策
         </a>
       </p>
