--- a/n8nmanager/changelog.html
+++ b/n8nmanager/changelog.html
@@ -85,7 +85,7 @@
   <div class="min-h-screen bg-gray-100">
   <!-- Navigation -->
   <header class="bg-white shadow-sm py-4 px-6 md:px-16 flex justify-between items-center border-b border-slate-200 sticky top-0 z-50 animate-fade-in-up">
-    <a href="/" class="flex items-center space-x-3">
+    <a href="index.html" class="flex items-center space-x-3">
       <img src="images/icon.png" alt="n8nManager App Icon" width="32" height="32" class="rounded-lg">
       <div class="text-2xl font-bold text-slate-900">n8nManager</div>
     </a>
@@ -96,7 +96,7 @@
       <a href="privacy.html" class="text-slate-600 hover:text-indigo-600 font-medium transition-colors inline-block">
         隱私權政策
       </a>
-      <a href="#download" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold px-6 py-2.5 rounded-lg transition-colors hover-scale-sm">
+      <a href="index.html#download" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold px-6 py-2.5 rounded-lg transition-colors hover-scale-sm">
         Try n8nManager
       </a>
     </nav>
@@ -120,7 +120,7 @@
         <a href="privacy.html" class="text-slate-700 hover:text-indigo-600 hover:bg-indigo-50 font-semibold py-4 px-4 rounded-lg transition-colors block">
           <span class="text-base">隱私權政策</span>
         </a>
-        <a href="#download" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-4 rounded-lg transition-colors block text-center">
+        <a href="index.html#download" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-4 rounded-lg transition-colors block text-center">
           <span class="text-base">Try it</span>
         </a>
       </div>
