--- a/n8nmanager/privacy.html
+++ b/n8nmanager/privacy.html
@@ -28,7 +28,7 @@
   <div class="min-h-screen bg-primary">
   <!-- Navigation -->
   <header class="bg-primary/80 backdrop-blur-sm glass-border py-4 px-6 md:px-16 flex justify-between items-center sticky top-0 z-50 animate-fade-in-up">
-    <a href="/" class="flex items-center space-x-3">
+    <a href="index.html" class="flex items-center space-x-3">
       <img src="images/icon.png" alt="n8nManager App Icon" width="32" height="32" class="rounded-lg">
       <div class="text-2xl font-bold text-light">n8nManager</div>
     </a>
@@ -50,7 +50,7 @@
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
         </svg>
       </button>
-      <a href="#download" class="bg-accent-1 hover:bg-accent-2 text-white font-bold px-6 py-2.5 rounded-lg transition-colors hover-scale-sm">
+      <a href="index.html#download" class="bg-accent-1 hover:bg-accent-2 text-white font-bold px-6 py-2.5 rounded-lg transition-colors hover-scale-sm">
         Try n8nManager
       </a>
     </nav>
@@ -74,7 +74,7 @@
         <a href="privacy.html" class="text-gray-light hover:text-accent-1 hover:bg-secondary-1 font-semibold py-4 px-4 rounded-lg transition-colors block">
           <span class="text-base">隱私權政策</span>
         </a>
-        <a href="#download" class="bg-accent-1 hover:bg-accent-2 text-white font-bold py-4 px-4 rounded-lg transition-colors block text-center">
+        <a href="index.html#download" class="bg-accent-1 hover:bg-accent-2 text-white font-bold py-4 px-4 rounded-lg transition-colors block text-center">
           <span class="text-base">Try it</span>
         </a>
         <!-- 移動版主題切換按鈕 -->
