--- a/n8nmanager/changelog.html
+++ b/n8nmanager/changelog.html
@@ -1368,16 +1368,66 @@
   </div>
 
   <!-- Footer -->
-  <footer class="text-gray-medium py-8 text-center text-sm mt-8">
+  <footer class="py-12 mt-8 border-t border-custom">
     <div class="max-w-6xl mx-auto px-6">
-      <p class="text-gray-medium">
-        Copyright &copy; 2025 n8nManager. All rights reserved.
-      </p>
-      <p class="mt-3">
-        <a href="privacy.html" class="text-accent-1 hover:text-accent-3 font-medium transition-colors">
-          隱私權政策
-        </a>
-      </p>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8 md:gap-12">
+        <!-- 左欄：品牌資訊 -->
+        <div class="flex flex-col items-center md:items-start">
+          <div class="flex items-center space-x-3 mb-3">
+            <img src="images/icon.png" alt="n8nManager Logo" width="40" height="40" class="rounded-lg">
+            <span class="text-xl font-semibold text-light">n8nManager</span>
+          </div>
+          <p class="text-gray-medium text-sm text-center md:text-left">
+            隨時隨地，掌控您的 n8n 自動化工作流程
+          </p>
+        </div>
+
+        <!-- 中欄：產品連結 -->
+        <div class="text-center md:text-left">
+          <h4 class="text-light font-semibold mb-4">n8nManager 的資訊</h4>
+          <ul class="space-y-2 text-sm">
+            <li>
+              <a href="index.html#features" class="text-gray-medium hover:text-accent-1 transition-colors">功能介紹</a>
+            </li>
+            <li>
+              <a href="changelog.html" class="text-gray-medium hover:text-accent-1 transition-colors">更新日誌</a>
+            </li>
+            <li>
+              <a href="index.html#faq" class="text-gray-medium hover:text-accent-1 transition-colors">常見問題</a>
+            </li>
+          </ul>
+        </div>
+
+        <!-- 右欄：其他資源 -->
+        <div class="text-center md:text-left">
+          <h4 class="text-light font-semibold mb-4">法蘭克的其他資源</h4>
+                    <ul class="space-y-2 text-sm">
+            <li>
+              <a href="https://www.frankchen.tw/" target="_blank" rel="noopener noreferrer"
+                class="text-gray-medium hover:text-accent-1 transition-colors">首頁</a>
+            </li>
+            <li>
+              <a href="https://www.frankchen.tw/n8n-resources/" target="_blank" rel="noopener noreferrer"
+                class="text-gray-medium hover:text-accent-1 transition-colors">n8n 教學</a>
+            </li>
+            <li>
+              <a href="https://www.frankchen.tw/personal/" target="_blank" rel="noopener noreferrer"
+                class="text-gray-medium hover:text-accent-1 transition-colors">關於我</a>
+            </li>
+            <li>
+              <a href="https://www.frankchen.tw/contact-frank/" target="_blank" rel="noopener noreferrer"
+                class="text-gray-medium hover:text-accent-1 transition-colors">聯絡我</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- 底部版權 -->
+      <div class="mt-10 pt-6 border-t border-custom text-center">
+        <p class="text-gray-medium text-sm">
+          &copy; 2025 法蘭克 All rights reserved.
+        </p>
+      </div>
     </div>
   </footer>
   </div>
