chore: 合併 changelog 衝突並修復 v1.1.0 預設展開問題
- 合併 stash 與遠端版本的 changelog.html
- 保留 v1.1.1 版本日誌（執行紀錄重試功能）
- 保留遠端版本的 SEO 優化與主題切換功能
- 修正 v1.1.0 預設為隱藏狀態

--- a/n8nmanager/index.html
+++ b/n8nmanager/index.html
@@ -80,8 +80,8 @@
       "name": "法蘭克",
       "url": "https://www.frankchen.tw/"
     },
-    "datePublished": "2024-06-18",
-    "dateModified": "2024-10-02",
+    "datePublished": "2025-06-18",
+    "dateModified": "2025-12-14",
     "version": "1.0.0",
     "fileSize": "25MB",
     "contentRating": "Everyone",
@@ -543,14 +543,14 @@
       <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-6">
         <div class="relative inline-block hover-scale-sm">
           <img src="images/app-store-badge.webp" alt="Download on the App Store" width="200" height="60"
-            class="h-14 w-auto opacity-60 cursor-not-allowed">
+            class="h-14 w-auto opacity-60 cursor-not-allowed" loading="lazy">
           <div class="absolute inset-0 bg-primary/20 rounded-lg flex items-center justify-center">
             <span class="text-white text-sm font-semibold bg-black/50 px-3 py-1 rounded-full">即將推出</span>
           </div>
         </div>
         <a href="https://play.google.com/store/apps/details?id=tw.frankchen.n8n_management_tool" target="_blank"
           rel="noopener noreferrer" class="inline-block hover-scale">
-          <img src="images/google-play-badge.png" alt="在 Google Play 上取得" width="200" height="60" class="h-14 w-auto">
+          <img src="images/google-play-badge.png" alt="在 Google Play 上取得" width="200" height="60" class="h-14 w-auto" loading="lazy">
         </a>
       </div>
     </div>
